// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Webex Meeting Info component snapshot matches snapshot of loading 1`] = `
<div
  className="wxc-meeting-info"
>
  <Spinner
    className=""
    color="black"
    percentage={null}
    showCheck={false}
    showPercentage={false}
    size={36}
  />
</div>
`;

exports[`Webex Meeting Info component snapshot matches snapshot of no meeting title 1`] = `
<div
  className="wxc-meeting-info"
>
  <h2>
    No Meeting Information
  </h2>
</div>
`;

exports[`Webex Meeting Info component snapshot matches snapshot of one on one meeting 1`] = `
<div
  className="wxc-meeting-info"
>
  <h2>
    Jackie Tester's Personal Room
  </h2>
</div>
`;

exports[`Webex Meeting Info component snapshot matches snapshot of scheduled meeting 1`] = `
<div
  className="wxc-meeting-info"
>
  <h2>
    Our Scheduled Meeting
  </h2>
</div>
`;

exports[`Webex Meeting Info component snapshot matches snapshot of scheduled meeting with custom CSS class 1`] = `
<div
  className="wxc-meeting-info my-custom-class"
>
  <h2>
    Our Scheduled Meeting
  </h2>
</div>
`;

exports[`Webex Meeting Info component snapshot matches snapshot of space meeting 1`] = `
<div
  className="wxc-meeting-info"
>
  <h2>
    Ad Hoc Meeting Space
  </h2>
</div>
`;
